# lithos

./: .gitignore  README.md  architecture.md  decisions.md  handoff.md  pim-prereg.md  spike-prereg.md
handoffs/: coderAS-handoff.md  experimentAS-handoff.md
pim/: CMakeLists.txt  README.md  config.yaml  run.py
pim/docs/: 01-recap-the-memory-wall.md  02-near-memory-computing.md  03-the-bank-model-and-fairness.md  04-byte-accounting-and-dmr.md  05-the-banking-factor-k.md  06-the-crossover-and-honest-science.md  README.md  glossary.md  references.md
pim/include/pim/: model.hpp
pim/src/: main.cpp  model.cpp
pim/tests/: test_pim.cpp
research/: landscape.md  usecase.md
simt/: CMakeLists.txt  README.md  build_wasm.ps1  test_viz.cjs  web_smoke.cjs
simt/analysis/: README.md  sweep.py
simt/docs/: 01-why-gpus.md  02-simt-execution-model.md  03-latency-hiding-occupancy.md  04-memory-coalescing.md  05-branch-divergence.md  06-cycle-accurate-simulation.md  07-isa-and-assembler.md  08-reduction-and-communication.md  09-memory-wall-measured.md  README.md  glossary.md  references.md
simt/include/simt/: assembler.hpp  core.hpp  isa.hpp  memory.hpp  trace.hpp
simt/kernels/: divergence.sasm  memory_bound.sasm  reduction.sasm  vector_add.sasm
simt/src/: assembler.cpp  core.cpp  isa.cpp  main.cpp  wasm_api.cpp
simt/tests/: test_simt.cpp
simt/web/: README.md  app.js  index.html  style.css
spike/: __init__.py  config.yaml  costmodel.py  datasets.py  decision.py  ensemble.py  inference.py  plots.py  provenance.py  run.py  sweep.py
spike/tests/: test_costmodel.py
(+2 files in other folders)
